# tpwt

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  duties.py  main.py  mkdocs.yml  param.json  param.jsonc  pyproject.toml
crates/mkfiles/: Cargo.toml  pred_files.rs
crates/mkfiles/src/: lib.rs  pathfile.rs  ph_files.rs  pred_files.rs  utils.rs
crates/mkfiles/src/ph_files/: dist.rs  ph_correct.rs  ph_gen.rs
crates/mkfiles/src/utils/: mod.rs  points.rs  progress_bar.rs  records.rs
data/txt/: event.cat  event.csv  event_120.csv  event_30.csv  station.csv
docs/: index.md  python.md
docs/api/: index.md
docs/api/lib/: index.md
docs/user-guide/: index.md  installation.md
python/tpwt/: __init__.py  __main__.py  checker.py  flow.py
python/tpwt/check/: __init__.py  check_input.py  check_target.py  checker.py
python/tpwt/gmt/: __init__.py  amp_and_phase_time.py  grid.py
python/tpwt/rose/: __init__.py  path.py  points.py  rose_io.py  rose_math.py  vels_inner.py
python/tpwt/tpwt_flow/: __init__.py  evt_make.py  grids_collect.py  sac_format.py
python/tpwt/tpwt_flow/data_filter/: __init__.py  aftan_snr.py  calculate.py  (+3 more)
sac/201309270803/: 201309270803.WT001.LHZ.sac  201309270803.WT002.LHZ.sac  201309270803.WT003.LHZ.sac  201309270803.WT004.LHZ.sac  201309270803.WT005.LHZ.sac  201309270803.WT006.LHZ.sac  201309270803.WT009.LHZ.sac  201309270803.WT010.LHZ.sac  201309270803.WT013.LHZ.sac  201309270803.WT015.LHZ.sac  201309270803.WT016.LHZ.sac  201309270803.WT019.LHZ.sac  201309270803.WT023.LHZ.sac  201309270803.WT024.LHZ.sac  201309270803.WT036.LHZ.sac  201309270803.WT041.LHZ.sac  201309270803.WT046.LHZ.sac  201309270803.WT048.LHZ.sac  201309270803.WT050.LHZ.sac  201309270803.WT052.LHZ.sac  201309270803.WT054.LHZ.sac  201309270803.WT057.LHZ.sac  201309270803.WT058.LHZ.sac  201309270803.WT060.LHZ.sac  201309270803.WT061.LHZ.sac  201309270803.WT062.LHZ.sac  201309270803.WT066.LHZ.sac  201309270803.WT067.LHZ.sac  201309270803.WT069.LHZ.sac  201309270803.WT072.LHZ.sac  201309270803.WT073.LHZ.sac  201309270803.WT075.LHZ.sac  201309270803.WT076.LHZ.sac  201309270803.WT077.LHZ.sac  201309270803.WT080.LHZ.sac
sac/201310132139/: 201310132139.63011.LHZ.sac  201310132139.63013.LHZ.sac  201310132139.WT001.LHZ.sac  201310132139.WT002.LHZ.sac  201310132139.WT003.LHZ.sac  201310132139.WT004.LHZ.sac  201310132139.WT005.LHZ.sac  201310132139.WT006.LHZ.sac  201310132139.WT007.LHZ.sac  201310132139.WT008.LHZ.sac  201310132139.WT009.LHZ.sac  201310132139.WT010.LHZ.sac  201310132139.WT011.LHZ.sac  201310132139.WT012.LHZ.sac  201310132139.WT013.LHZ.sac  201310132139.WT014.LHZ.sac  201310132139.WT015.LHZ.sac  201310132139.WT016.LHZ.sac  201310132139.WT017.LHZ.sac  201310132139.WT018.LHZ.sac  201310132139.WT019.LHZ.sac  201310132139.WT020.LHZ.sac  201310132139.WT021.LHZ.sac  201310132139.WT022.LHZ.sac  201310132139.WT023.LHZ.sac  201310132139.WT024.LHZ.sac  201310132139.WT025.LHZ.sac  201310132139.WT026.LHZ.sac  201310132139.WT027.LHZ.sac  201310132139.WT028.LHZ.sac  201310132139.WT029.LHZ.sac  201310132139.WT030.LHZ.sac  201310132139.WT031.LHZ.sac  201310132139.WT032.LHZ.sac  201310132139.WT033.LHZ.sac  201310132139.WT034.LHZ.sac  201310132139.WT035.LHZ.sac  201310132139.WT036.LHZ.sac  201310132139.WT037.LHZ.sac  201310132139.WT038.LHZ.sac  (+42 more)
scripts/: evt_2021_cat.py  plot.py  preprocess.py
src/: lib.rs  navi.rs  param.rs
src/navi/: geo_xyz.rs  point.rs  region.rs
src/navi/geo_xyz/: geo_fns.rs
src/param/: param_json.rs
src/param/param_json/: model_param.rs  parameters.rs  target_param.rs
src/tpwt/: __init__.py  config.py  math.py
src/tpwt/inverse/: __init__.py  inverse.py
src/tpwt/inversion/: __init__.py  inver.py
src/tpwt/plot/: __init__.py  phase.py  ploter.py  region.py
src/tpwt/utils/: pather.py
test/: test.py  test_check.py  test_flow.py  test_tpwt_flow.py  未命名绘图.drawio
tests/: test_inverse.py  test_mkfile.py  test_surface.py
tpwt_py/: get_SAC.py  get_cut_event.py  param.json  tpwt_1.py  tpwt_2.py  tpwt_3.py  tpwt_4.py  tpwt_5.py  tpwt_6_checkboard.py
tpwt_py/pysrc/: get_param.py  tpwt.py
(+43 files in other folders)
