[package]
name = "tpwt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tpwt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
ndarray = { version = "0.15", features = ["rayon", "serde"] }
polars = { version = "0.35", features = [
  "lazy",
  "ndarray",
  "serde",
  "json",
  "describe",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = "0.27"
sacio = "0.1"
rayon = "1.8"
fstrings = "0.2"
