[package]
name = "tpwt"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]
path = "src/lib.rs"

[workspace]
members=["crates/mkfiles"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }

mkfiles = { path = "crates/mkfiles" }

