[project]
name = "tpwt"
version = "0.1.0"
description = "tpwt program in python with rust"
authors = [{ name = "Sonder Merak", email = "merak19981999@gmail.com" }]
dependencies = [
    "icecream>=2.1.3",
    "pandas>=2.1.4",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "mkdocstrings-python>=1.8.0",
    "obspy>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=23.3.2",
]

[tool.maturin]
python-source = "python"
module-name = "tpwt._lowlevel"
features = ["pyo3/extension-module"]

[project.scripts]
hello = "tpwt:hello"

[tool.rye.scripts]
docs = "rye run mkdocs build"

[tool.ruff]
extend-select = [
  "B",
  "BLE",
  "C4",
  "E",
  "ERA",
  "I",
  "ICN",
  "INP",
  "ISC",
  "N",
  "NPY",
  "PGH",
  "PIE",
  # "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TCH",
  "TID",
  "YTT",
]
ignore = ["E402", "B905", "N818", "S101"]
show-fixes = true
target-version = "py312"
