[project]
name = "tpwt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sonder Merak", email = "merak19981999@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pygmt>=0.14.2",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
]

[project.scripts]
tpwt = "tpwt:main"

[tool.maturin]
module-name = "tpwt._core"
python-packages = ["tpwt"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
    "pygments>=2.19.1",
    "taskipy>=1.14.1",
    "termynal>=0.13.0",
]

[tool.taskipy.tasks]
pdocs = "mkdocs serve"
