[package]
name = "mkfiles"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
csv = "1.3"
pyo3 = "0.24"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = { version = "0.17", features = ["rayon"] }
scan_fmt = "0.2"
memmap2 = "0.9"
getset = "0.1"
sacio = "0.1.0"
walkdir = "2.5.0"
